# simpledb

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/simpledb/: buffer.h  compiler.h
src/: CMakeLists.txt  buffer.c  compiler.c  compiler.h  cursor.c  cursor.h  db.c  db.h  main.c  meson.build  table.c  table.h
test/: meson.build  test.c
